--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
             <div class="destination" id="barcelona">
                 <h2>Barcelona</h2>
             </div>
-			
-			<div class="destination" id="CostaRica">
+
+			<div class="destination" id="costaRica">
                 <h2>Costa Rica</h2>
             </div>
-        </div>
+      </div>
+
     </div>
 
 </body>
